# megabrain

./: .gitignore  .megabrainignore  .megabrainqueries  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  NEXT.md  README.md  REFACTOR_PLAN.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: ARCHITECTURE.md  GRAPH.md  GUIDE.md  RECIPES.md  REFERENCE.md  STUDIO.md
evals/swebench/: ab_best.py  ask_eval.py  harness.py  rerun_failures.py
examples/: 01_programmatic.py  02_custom_chunker.py  03_chunk_map.py  README.md
examples/forged/: README.md  sinatra_ruby_rb.py
examples/sample_sql/: shop.sql
examples/webui/: server.py
examples/webui/legacy-php-app/: README.md  ajax_stock.php  clientes.php  facturacion.php  instalar.php  inventario.php  login.php  logout.php  main.php  pedido_nuevo.php  pedidos.php  reportes.php
examples/webui/legacy-php-app/admin/: usuarios.php
examples/webui/legacy-php-app/inc/: config.php  db.php  footer.php  funciones.php  header.php
examples/webui/ui/: index.html
megabrain/: __init__.py  app.py  ask.py  ask_agents.py  bm25.py  chunker.py  chunker_php.py  chunker_ts.py  cli.py  docsearch.py  embeddings.py  flows.py  forge.py  forge_eval.py  forge_specialize.py  graph.py  indexer.py  issue.py  markdown.py  mcp_server.py  model.py  providers.py  query.py  rerank.py  rerank2.py  serve.py  session.py  store.py  strategies.py
megabrain/chunkers/: __init__.py  cast.py  markdown.py  php.py  python.py  treesitter.py
megabrain/frontends/: cli.py  http.py  mcp.py
megabrain/indexing/: __init__.py  indexer.py  strategies.py
megabrain/providers/: __init__.py  base.py  claude.py  embeddings.py
megabrain/retrieval/: __init__.py  bundle.py  issue.py  params.py  query.py  rerank.py  scoring.py
src/megabrain/: __init__.py  __main__.py  app.py  ask.py  ask_agents.py  errors.py  forge_eval.py  forge_specialize.py  graph.py  mcp_server.py  store.py
src/megabrain/ask/: __init__.py  agents.py  narrator.py  warmup.py
src/megabrain/chunkers/: base.py  php.py  python.py
src/megabrain/forge/: __init__.py  ab_gate.py  coverage.py  specialize.py
src/megabrain/frontends/: __init__.py  cli.py  http.py  mcp.py
src/megabrain/indexing/: graph.py  ignore.py  indexer.py  strategies.py
src/megabrain/providers/: __init__.py  claude.py  embeddings.py
src/megabrain/retrieval/: __init__.py  bm25.py  bundle.py  docsearch.py  files.py  grepx.py  mapcard.py  params.py  readx.py  render.py  replacex.py  rerank.py  scoring.py  state.py
src/megabrain/server/: cli.py  http.py  install.py  mcp.py  session.py
src/megabrain/server/ui/: api.js  app.js  index.html  mock.js
src/megabrain/storage/: __init__.py  flows.py  registry.py  store.py
tests/: README.md  conftest.py  test_ask_agents.py  test_ask_citation.py  test_ask_modes.py  test_ask_v2_integration.py  test_cast_chunker.py  test_cast_unification.py  test_chunker_ts.py  test_claude_provider.py  test_custom_strategy.py  test_embed_concurrency.py  test_embeddings.py  test_flows.py  test_forge.py  test_forge_specialize.py  test_get_code_security.py  test_golden_render.py  test_graph.py  test_grepx.py  test_index_global_batching.py  test_indexer_search.py  test_install.py  test_mapcard.py  test_markdown_chunker.py  test_mcp_server.py  test_mcp_tools_golden.py  test_no_shadowing.py  test_path_scope.py  test_php_chunker.py  test_php_legacy_chunker.py  test_provider_autodetect.py  test_providers.py  test_rate_limit.py  test_read_replace.py  test_recall_floor.py  test_registry.py  test_render_budget.py  test_render_related.py  test_rerank.py  (+7 more)
tests/goldens/: bundle_login.json  cast_corpus.json  get_code_file.md  get_code_symbol.md  mcp_tools.json  prune_structure_login.json  render_invoice.md  render_login.md  render_login_compact.md  render_login_full.md  render_pruned_login.md  render_session.md  scoring_lanes.json  selection_login.json
