[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "megabrain"
dynamic = ["version"]                       # single-sourced from megabrain/__init__.py
description = "Local code-intelligence engine: one call returns all the code related to a question, explained with the real code spliced in."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Berna Castro", email = "bernacas@gmail.com" }]
keywords = ["code-intelligence", "retrieval", "rag", "embeddings", "code-search",
            "mcp", "ast", "tree-sitter", "developer-tools"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Documentation",
]
# Always-on languages (Python via stdlib ast; TS/JS via tree-sitter) + markdown,
# retrieval, the MCP server and serve-api all run on this base. urllib (stdlib)
# talks to any OpenAI-compatible endpoint (OpenRouter/local) — no SDK dependency.
dependencies = [
    "numpy>=1.24",
    "tree_sitter>=0.21",
    "tree_sitter_typescript>=0.23",
]

[project.optional-dependencies]
# Extra code languages — activate when their grammar is installed.
languages = ["tree_sitter_ruby>=0.23", "tree_sitter_go>=0.23",
             "tree_sitter_rust>=0.23", "tree_sitter_php>=0.23"]
# Claude chat provider for ask/--best (MEGABRAIN_CHAT_PROVIDER=claude):
# Claude Code subscription credits or ANTHROPIC_API_KEY, via the Agent SDK.
claude = ["claude-agent-sdk>=0.1.0"]

[project.scripts]
megabrain = "megabrain.frontends.cli:main"

[project.urls]
Homepage = "https://github.com/bernatch22/megabrain"
Repository = "https://github.com/bernatch22/megabrain"
Issues = "https://github.com/bernatch22/megabrain/issues"
Changelog = "https://github.com/bernatch22/megabrain/blob/master/CHANGELOG.md"

[tool.setuptools.packages.find]
include = ["megabrain*"]

[tool.setuptools.package-data]
megabrain = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B"]
# E501: prompts/tables/URLs legitimately run long; B905: zip(strict=) would be
# a behavior change on the tuned retrieval path — revisit deliberately.
ignore = ["E501", "B905"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["E402"]   # tests insert the repo root on sys.path before importing

[tool.setuptools.dynamic]
version = { attr = "megabrain.__version__" }
